--- a/styles.css
+++ b/styles.css
@@ -110,3 +110,11 @@
   padding-inline: 4px;
 }
 
+.logseq-task-modal-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  margin-top: 16px;
+}
+
+
