--- a/styles.css
+++ b/styles.css
@@ -252,8 +252,14 @@
 }
 
 .logseq-task-props-icon {
-  font-size: 14px;
-  line-height: 1;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0;
+}
+
+.logseq-task-props-icon svg {
+  display: block;
 }
 
 /* ========== Property modal ========== */
